updating our details

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Jack of all trades, master of none...yet...</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Tokyo!!! (Innnn West Philadelphia not born, but raised.)</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Anything nerd-worthy and creative...and food..does eating count?</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Just a job that allows me to travel, meet interesting people, eat, create, eat, design...whatever job title that may be.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Philly....why do you want to know? Who sent you??</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>D. All of the above. ^_^</p>
     </section>
 
     <footer id="footer">
